--- a/cluster-plots.html
+++ b/cluster-plots.html
@@ -60,8 +60,7 @@ Polymer({
     ], _set_state : function(active, negative, color, width, height){
         this._ctx = this.$.canv.getContext('2d');
         if(active){
-            (!this._mousemove_bound) && (this._mousemove_bound = this._mousemove.bind(this));
-            (!this._bound) && document.addEventListener('mousemove', this._mousemove_bound);
+            (!this._bound) && this.listen(document, 'mousemove', '_mousemove');
             this._bound = true;
 
             this._old_x = null;
@@ -77,7 +76,7 @@ Polymer({
                 this._ctx.clearRect(0, 0, width, height);
             }
         } else {
-            this._bound && document.removeEventListener('mousemove', this._mousemove_bound);
+            this._bound && this.unlisten(document, 'mousemove', '_mousemove');
             this._bound = false;
             this._ctx.clearRect(0, 0, width, height);
         }
@@ -701,15 +700,14 @@ font-size: 10px;
             }
 
             plots[best_ii].appendChild(this._painter_el);
-            (!this._end_paint_bound) && (this._end_paint_bound = this._end_paint.bind(this));
-            document.addEventListener('mouseup', this._end_paint_bound, true);
+            this.listen(document, 'mouseup', '_end_paint');
             Polymer.dom.flush();
             this.fire('paint',{
                 state: 'start'
             });
             this._painter_el._mousemove(e);
         }, _end_paint: function(){
-            document.removeEventListener('mouseup', this._end_paint_bound, true);
+            this.unlisten(document, 'mouseup', '_end_paint');
             this._painter_el.set('active', false);
             this._painter_el.parentNode.removeChild(this._painter_el);
             this._painter_el = null;
