--- a/tile-element.html
+++ b/tile-element.html
@@ -161,6 +161,9 @@ display: none;
 display: block;
 pointer-events: none;
 }
+:host(.active.moving) .over{
+display: none;
+}
 :host(.active.moving.proximate){
 background-color: initial;
 opacity: 1;
